{{$NEXT}}

- Add the $SIG{__WARN__} hook in an INIT block. We really don't want to
  trigger this because of a compile-time warning, and because of a bug in
  Test::Builder, this can actually cause the warning to be lost
  entirely. Reported by Todd Rinaldo in
  https://github.com/Test-More/test-more/issues/729.


0.02     2016-05-23

- Make the event return false for increments_count, so warnings-related
  failures don't cause test count issues.

- Make the plugin add a prefix to the warning message rather than adding it in
  the event class's summary method.

- Make causes_fail an attribute in the event. It defaults to to true, but can
  be set to false if you'd like to repurpose the event object for something
  else.


0.01     2016-05-22

- First release upon an unsuspecting world.